Fix:/ Modifica archivo Empresa.php, agrega datos ejemplos para consistencia en bd. Modifica EmpresaController.php, agrega prefijo v1 a los path. Modifica migracion empresa (...create_empresa_table.php), agrega columna presentacion.
